# napari-bigfish

./: .buildinfo  LICENSE  README.md  genindex.html  index.html  modules.html  napari_bigfish.array_util.html  napari_bigfish.bigfishapp.html  napari_bigfish.html  napari_bigfish.napari_util.html  napari_bigfish.qtutil.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  tox.ini
.github/workflows/: create_doc.yml
_sources/: napari_bigfish.array_util.rst.txt  napari_bigfish.bigfishapp.rst.txt  napari_bigfish.napari_util.rst.txt  napari_bigfish.qtutil.rst.txt  napari_bigfish.rst.txt
_sources/user/: batch_processing.rst.txt  installation.rst.txt  introduction.rst.txt  spot_detection.rst.txt  user_documentation.rst.txt
docs/source/: conf.py  index.rst  modules.rst
docs/source/api/: api.rst  modules.rst
docs/source/user/: batch_processing.rst  spot_detection.rst
results/: 2023-03-28 11:35:23.385751__count.csv
src/napari_bigfish/: __init__.py  _sample_data.py  _widget.py  array_util.py  bigfishapp.py  napari.yaml  napari_util.py  qtutil.py
src/napari_bigfish/_tests/: test_array_util.py  test_bigfishapp.py  test_napari_util.py  test_qtutil.py  test_sample_data.py  test_widget.py
user/: batch_processing.html  installation.html  introduction.html  spot_detection.html  user_documentation.html
